--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,7 +32,8 @@ application.langs="en"
 # ~~~~~ 
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
+db.default.driver=org.postgresql.Driver
+db.default.url="postgres://adoptr:password@localhost/adoptr"
 # db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
