--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,3 +57,6 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+aws.accessKeyId=${?ACCESS_KEY}
+aws.secretKey=${?SECRET_KEY}
+s3.region="eu-west-1"
